fixed emscripten build

--- a/HtmlEx/html/home.html
+++ b/HtmlEx/html/home.html
@@ -2,6 +2,10 @@ R"(
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+</head>
+
 <body>
     <div id="home" class="content">
         <h2>Home</h2>
