--- a/HtmlEx/html/contact.html
+++ b/HtmlEx/html/contact.html
@@ -2,6 +2,10 @@ R"(
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+</head>
+
 <body>
     <div id="contact" class="content">
         <h2>Contact Us</h2>
